fixed dashboard alignment

--- a/carzone/static/css/style.css
+++ b/carzone/static/css/style.css
@@ -7041,7 +7041,9 @@ footer {
 
 /** SHOP table **/
 table {
-    width: 100%;
+    width: 95% !important;
+    padding: 5%;
+    margin: auto;
 }
 
 .shop-header {
